# transformers-v1

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main_transformers-v1.yml
frontend/: angular.json  package-lock.json
frontend/src/: index.html
frontend/src/app/: app.component.css  app.component.html  app.component.spec.ts  app.component.ts  transformer.model.ts  transformer.service.ts
tests/: test_api.py  test_bumblebee.py  test_cli.py  test_ironhide.py  test_jazz.py  test_ratchet.py  test_registry.py
transformers_v1/: __init__.py  api.py  cli.py  registry.py
transformers_v1/bots/: __init__.py  base.py  bumblebee.py  ironhide.py  jazz.py  ratchet.py
