[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformers-v1"
version = "1.0.0"
description = "Autobots, transform! A pluggable engine that turns one software artifact into another."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
transformers-v1 = "transformers_v1.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]

[tool.setuptools.packages.find]
include = ["transformers_v1*"]
